package tn.zeros.marketmaster.entity;

import jakarta.persistence.*;
import lombok.*;

import java.io.Serializable;
import java.util.LinkedHashSet;
import java.util.Set;

@Entity
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class GamePortfolio implements Serializable {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @ManyToOne(cascade = CascadeType.ALL)
    @JoinColumn(name = "game_id")
    private Game game;

    @ManyToOne(cascade = CascadeType.ALL)
    @JoinColumn(name = "user_id")
    private User user;

    private double cash;

    @OneToMany(mappedBy = "gamePortfolio", cascade = CascadeType.ALL, orphanRemoval = true)
    private Set<GameTransaction> gameTransactions = new LinkedHashSet<>();

    @OneToMany(mappedBy = "gamePortfolio", cascade = CascadeType.ALL, orphanRemoval = true)
    private Set<GameHolding> gameHoldings = new LinkedHashSet<>();

}
