package tn.zeros.marketmaster.entity.enums;

public enum AchievementType {
    COURSE_COMPLETION,
    TRADING_VOLUME,
    PROFIT_MILESTONE,
    SESSION_PARTICIPATION
}
