package tn.zeros.marketmaster.entity.enums;

public enum GameStatus {
    UPCOMING,
    ACTIVE,
    COMPLETED,
    CANCELLED
}
