package tn.zeros.marketmaster.entity.enums;

public enum OrderStatus {
    PENDING,
    EXECUTED,
    CANCELLED
}
