package tn.zeros.marketmaster.entity.enums;

import lombok.Getter;

@Getter
public enum Role {
    USER,
    ADMIN
}