package tn.zeros.marketmaster.entity.enums;

public enum TransactionType {
    BUY,
    SELL
}
